Added Some css Manage

--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="utf-8">
     <title>Logo Design</title>
     <link href="https://fonts.googleapis.com/css?family=Chela+One|Merienda" rel="stylesheet">
-    <link rel="stylesheet" href="logo.css">
-    <link rel="stylesheet" href="logo2.css">
-    <link rel="stylesheet" href="logo3.css">
+    <link rel="stylesheet" href="logoRed.css">
+    <link rel="stylesheet" href="logoBlue.css">
+    <link rel="stylesheet" href="logoYellow.css">
+    <link rel="stylesheet" href="logo2Red.css">
+    <link rel="stylesheet" href="logo2Blue.css">
+    <link rel="stylesheet" href="logo2Yellow.css">
   </head>
   <body>
     <div class="Chela-One">
-      <a href="#"><span class="logo">YogoLabs</span></a>
-      <a href="#"><span class="logo2">YogoLabs</span></a>
-      <a href="#"><span class="logo3">YogoLabs</span></a>
+      <a href="#"><span class="logoRed">YogoLabs</span></a>
+      <a href="#"><span class="logoYellow">YogoLabs</span></a>
+      <a href="#"><span class="logoBlue">YogoLabs</span></a>
     </div>
-    <div class="">
-      <a href="#"><span class="logo">YogoLabs</span></a>
-      <a href="#"><span class="logo2">YogoLabs</span></a>
-      <a href="#"><span class="logo3">YogoLabs</span></a>
+    <div class="Marienda">
+      <a href="#"><span class="logo2Red">YogoLabs</span></a>
+      <a href="#"><span class="logo2Yellow">YogoLabs</span></a>
+      <a href="#"><span class="logo2Blue">YogoLabs</span></a>
     </div>
   </body>
 </html>
