--- a/index.html
+++ b/index.html
@@ -3,24 +3,35 @@
   <head>
     <meta charset="utf-8">
     <title>Logo Design</title>
-    <link href="https://fonts.googleapis.com/css?family=Chela+One|Merienda" rel="stylesheet">
-    <link rel="stylesheet" href="logoRed.css">
-    <link rel="stylesheet" href="logoBlue.css">
-    <link rel="stylesheet" href="logoYellow.css">
-    <link rel="stylesheet" href="logo2Red.css">
-    <link rel="stylesheet" href="logo2Blue.css">
-    <link rel="stylesheet" href="logo2Yellow.css">
+    <link href="https://fonts.googleapis.com/css?family=Chela+One|Eczar|Merienda|Orbitron|Pacifico" rel="stylesheet">
+    <link rel="stylesheet" href="./build/logo.css">
   </head>
   <body>
-    <div class="Chela-One">
-      <a href="#"><span class="logoRed">YogoLabs</span></a>
-      <a href="#"><span class="logoYellow">YogoLabs</span></a>
-      <a href="#"><span class="logoBlue">YogoLabs</span></a>
+    <div class="chelaOne">
+      <a href="#"><span class="red">YogoLabs</span></a>
+      <a href="#"><span class="yellow">YogoLabs</span></a>
+      <a href="#"><span class="blue">YogoLabs</span></a>
     </div>
-    <div class="Marienda">
-      <a href="#"><span class="logo2Red">YogoLabs</span></a>
-      <a href="#"><span class="logo2Yellow">YogoLabs</span></a>
-      <a href="#"><span class="logo2Blue">YogoLabs</span></a>
+    <div class="marienda">
+      <a href="#"><span class="red">YogoLabs</span></a>
+      <a href="#"><span class="yellow">YogoLabs</span></a>
+      <a href="#"><span class="blue">YogoLabs</span></a>
     </div>
+    <div class="orbitron">
+      <a href="#"><span class="red">YogoLabs</span></a>
+      <a href="#"><span class="yellow">YogoLabs</span></a>
+      <a href="#"><span class="blue">YogoLabs</span></a>
+    </div>
+    <div class="eczar">
+      <a href="#"><span class="red">YogoLabs</span></a>
+      <a href="#"><span class="yellow">YogoLabs</span></a>
+      <a href="#"><span class="blue">YogoLabs</span></a>
+    </div>
+    <div class="pacifico">
+      <a href="#"><span class="red">YogoLabs</span></a>
+      <a href="#"><span class="yellow">YogoLabs</span></a>
+      <a href="#"><span class="blue">YogoLabs</span></a>
+    </div>
+
   </body>
 </html>
