--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Logo Design</title>
     <link href="https://fonts.googleapis.com/css?family=Chela+One|Eczar|Merienda|Orbitron|Pacifico" rel="stylesheet">
-    <link rel="stylesheet" href="./build/logo.css">
+    <link rel="stylesheet" href="./build/logo/logo.css">
   </head>
   <body>
     <div class="chelaOne">
